<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proximity System</string>
    <string name="app_versionName">2.0 - 01/17/2014</string>
    <string name="app_about">About</string>
    <string name="menu_about">About</string>
    <string name="about_developers_title">Developed by</string>
    <string name="about_thanks_title">Thanks to</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_add">Add a Region</string>
    <string name="menu_features">Select Features</string>
    <string name="menu_show_features">Show Features</string>
    <string name="menu_hide_features">Hide Features</string>
    <string name="menu_clear">Clear Regions</string>
    <string name="menu_save_image">Snapshot</string>
    <string name="menu_epsilon">Set Epsilon</string>
    <string name="app_epsilon">Set Epsilon</string>
    <string name="save_success">The image has been saved.</string>
    <string name="save_fail">The image failed to save.</string>
    <string name="neighbourhoods">Neighbourhoods</string>
    <string name="regions">Regions</string>
    <string name="intersection">Intersection</string>
    <string name="intersection_degree">Degree:</string>
    <string name="app_features">Select Features</string>
    <string name="compliment">Compliment</string>
    <string name="difference">Difference</string>
    <string name="invalid_polygon">Polygons need at least three points.</string>
    <string name="menu_use_neighbourhood">Use Neighbourhoods</string>
    <string name="intersection_union">Union: </string>
    <string name="intersection_size">Intersection: </string>
    <string name="upperapprox">Upper Approximation</string>

</resources>