<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_degree"
        android:actionLayout="@layout/intersection_degree"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/intersection_degree"/>
    <item
        android:id="@+id/menu_union"
        android:actionLayout="@layout/intersection_union"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/intersection_union"/>
    <item
        android:id="@+id/menu_size"
        android:actionLayout="@layout/intersection_size"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/intersection_size"/>

</menu>