<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/about_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/about_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dip"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/about_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/about_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/about_developers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_developers_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/about_developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/about_developers"
            tools:listitem="@android:layout/simple_list_item_1" >
        </ListView>

        <TextView
            android:id="@+id/about_thanks_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_thanks_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/about_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/about_thanks" >
        </ListView>
    </LinearLayout>

</FrameLayout>